--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Barbearia Alura</title>
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -28,6 +29,8 @@
 		<section class="principal">
 			<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
 
+			<img class="utensilios" src="/utensilios.jpg" alt="Utensílios de barbeiro">
+
 			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor
 				para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos
 				clientes a cada dia.</p>
@@ -37,19 +40,37 @@
 
 			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui
 				padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-			</section>
+		</section>
+
+		<section class="mapa">
+			<h3 class="titulo-principal">Nosso estabelecimento</h3>
+			<p>Nosso estabelecimento está localizado no coração da cidade.</p>
+			<div class="mapa-conteudo">
+				<iframe
+					src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13821.532157112164!2d-51.30764!3d-29.997156!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2251d34f63e4b72d!2sBarbearia%20Vitorino!5e0!3m2!1spt-BR!2sbr!4v1598493388463!5m2!1spt-BR!2sbr"
+					width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+					tabindex="0"></iframe>
+			</div>
+		</section>
 
 		<section class="beneficios">
 			<h3 class="titulo-principal">Benefícios</h3>
 
-			<ul>
-				<li class="itens">Atendimento aos Clientes</li>
-				<li class="itens">Espaço diferenciado</li>
-				<li class="itens">Localização</li>
-				<li class="itens">Profissionais Qualificados</li>
-			</ul>
-
-			<img src="beneficios.jpg" class="imagembeneficios" alt="Foto de uma Navalha">
+			<div class="conteudo-beneficios">
+				<ul class="lista-beneficios">
+					<li class="itens">Atendimento aos Clientes</li>
+					<li class="itens">Espaço diferenciado</li>
+					<li class="itens">Localização</li>
+					<li class="itens">Profissionais Qualificados</li>
+					<li class="itens">Pontualidade</li>
+					<li class="itens">Limpeza</li>
+				</ul><img src="beneficios.jpg" class="imagem-beneficios" alt="Foto de uma Navalha">
+			</div>
+			<div class="video">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0"
+					allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+					allowfullscreen></iframe>
+			</div>
 		</section>
 	</main>
 
