--- a/contato.html
+++ b/contato.html
@@ -7,6 +7,7 @@
 
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -25,7 +26,7 @@
 	</header>
 
 	<main>
-		<form action="">
+		<form>
 			<label for="nomesobrenome">Nome e Sobrenome</label>
 			<input id="nomesobrenome" type="text" class="input-padrao" required>
 
