class contato included on main of contato.html

--- a/contato.html
+++ b/contato.html
@@ -25,7 +25,7 @@
 		</div>
 	</header>
 
-	<main>
+	<main class="contato">
 		<form>
 			<label for="nomesobrenome">Nome e Sobrenome</label>
 			<input id="nomesobrenome" type="text" class="input-padrao" required>
@@ -37,7 +37,7 @@
 			<input id="telefone" type="tel" class="input-padrao" required placeholder="(XX) XXXXX-XXXX">
 
 			<label for="mensagem">Mensagem</label>
-			<textarea id="mensagem" cols="30" rows="10" class="input-padrao" required></textarea>
+			<textarea id="mensagem" cols="30" rows="10" class="campo-padrao" required></textarea>
 
 			<fieldset>
 				<legend>Como prefere o nosso contato?</legend>
@@ -60,7 +60,7 @@
 
 			<label class="checkbox"><input type="checkbox" checked> Gostaria de receber nossas novidades por e-mail?</label>
 
-			<input type="submit" value="Enviar formulário" class="enviar">
+			<input type="submit" value="Enviar formulário" class="botao">
 		</form>
 
 		<table>
